@@ -4,11 +4,9 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
-import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import net.minecraft.core.Direction;
-import net.minecraft.util.Mth;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.phys.AABB;
@@ -18,28 +16,7 @@ import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContr
 @Mixin(Entity.class)
 public abstract class EntityMixin {
 
-	private final Entity self = (Entity) (Object) this;
-
-	@Inject(method = "turn", at = @At("HEAD"), cancellable = true)
-	public void createbigcannons$turn(double yaw, double pitch, CallbackInfo ci) {
-		if (this.self.getVehicle() instanceof PitchOrientedContraptionEntity poce) {
-			float crot = poce.getRotationCoefficient();
-			float dxr = (float) pitch * crot;
-			float dyr = (float) yaw * crot;
-			this.self.setXRot(this.self.getXRot() + dxr);
-			this.self.setYRot(this.self.getYRot() + dyr);
-
-			float e = poce.maximumDepression();
-			float d = -poce.maximumElevation();
-			this.self.setXRot(Mth.clamp(this.self.getXRot(), d, e));
-			this.self.xRotO += dxr;
-			this.self.yRotO += dyr;
-			this.self.xRotO = Mth.clamp(this.self.xRotO, d, e);
-
-			self.getVehicle().onPassengerTurned(this.self);
-			if (ci.isCancellable()) ci.cancel();
-		}
-	}
+	@Unique private final Entity self = (Entity) (Object) this;
 
 	@Inject(method = "makeBoundingBox", at = @At("HEAD"), cancellable = true)
 	private void createbigcannons$makeBoundingBox(CallbackInfoReturnable<AABB> cir) {
