@@ -34,6 +34,8 @@ spark_forge_file=3824951
 spark_fabric_file=3824949
 modmenu_version=3.2.5
 lazydfu_version=0.1.2
+freecam_forge_file=4643126
+freecam_fabric_file=4643132
 
 rpl_version=1.0.0-3a68f88
 
